--- a/core/templates/core/navbar.html
+++ b/core/templates/core/navbar.html
@@ -35,12 +35,14 @@
         </button>
       </div>
       <div class="relative mt-5 w-max" :class="open ? 'mr-32' : 'mr-0'">
-        <img
+        <a href="{% url 'perfil' %}">
+          <img 
           src="{% static '/core/images/profile.jpg' %}"
           alt="Imagem de {{ user.username.split.0.title }}"
           class="mb-5 shadow-md transition-all duration-200"
           :class="open ? 'h-20 w-20 rounded-3xl' : 'h-14 w-14 rounded-2xl'"
-        />
+          />
+        </a>
         <span
           class="absolute -right-2 -top-2 flex h-8 w-8 items-center justify-center rounded-full bg-gray-200 text-center shadow"
           :class="open || 'scale-0'"
@@ -69,7 +71,7 @@
         </a>
       </li>
       <li>
-        <a href="">
+        <a href="{% url 'comunicados' %}">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             fill="none"
