--- a/core/templates/core/comunicados.html
+++ b/core/templates/core/comunicados.html
@@ -1,3 +1,12 @@
-{% extends 'core/base.html' %} {% load static %}
+{% extends 'core/base.html' %} {% load static %} {% block head %}
+
+{% endblock %} {% block content %}
+
+<div class="text-5xl text-color-txt-perfil font-semibold">
+  Comunicados
+</div>
 
 
+
+
+{% endblock %}
