--- a/core/templates/core/comunicados.html
+++ b/core/templates/core/comunicados.html
@@ -1,11 +1,37 @@
 {% extends 'core/base.html' %} {% load static %} {% block head %}
 
-{% endblock %} {% block content %}
+{% endblock %} {% block content %} 
+<div class="flex justify-center min-h-full pt-24">
+  <div class="text-[30px] text-color-txt-perfil font-semibold w-[50%]">
+    Comunicados
+  
 
-<div class="text-5xl text-color-txt-perfil font-semibold">
-  Comunicados
+    <div class="grid grid-cols-2 gap-16 pt-14 ml-4">
+      <div class="h-[300px] w-[350px] rounded-2xl shadow-xl bg-color-bg-perfil">
+          <img class="h-[178px] w-full rounded-2xl" src="{% static '/core/images/img1.jpeg' %}">
+        <div class="ml-2">
+          <label class="text-gray-500 font-normal text-xs text-right"> 08/11/2005 </label><!--Here we need to put a date when the communicate was registered-->
+          <p class="text-black font-bold text-base">asdasdas</p>
+        </div>
+      </div>
+      <div class="h-[300px] w-[350px] rounded-2xl shadow-xl bg-color-bg-perfil">
+          <img class="h-[178px] w-full rounded-2xl" src="{% static '/core/images/img1.jpeg' %}">
+        <div class="ml-2">
+          <label class="text-gray-500 font-normal text-xs text-right"> 08/11/2005 </label> <!--Here we need to put a date when the communicate was registered-->
+          <p class="text-black font-bold text-base">asdasdas</p>
+        </div>
+      </div>
+      <div class="h-[300px] w-[350px] rounded-2xl shadow-xl bg-color-bg-perfil">
+          <img class="h-[178px] w-full rounded-2xl" src="{% static '/core/images/img1.jpeg' %}">
+        <div class="ml-2">
+          <label class="text-gray-500 font-normal text-xs text-right"> 08/11/2005 </label> <!--Here we need to put a date when the communicate was registered-->
+          <p class="text-black font-bold text-base">asdasdas</p>
+        </div>
+      </div>
+
+    </div>
+  </div>
 </div>
-
 
 
 
