--- a/core/templates/core/header.html
+++ b/core/templates/core/header.html
@@ -1,13 +1,32 @@
 <header
-  class="relative flex items-center justify-between rounded-br-3xl bg-slate-100 px-8 py-5 shadow-sm"
+  class="relative flex items-center justify-between bg-slate-100 px-8 py-5 shadow-sm"
+  :class="open ? 'rounded-br-3xl' : 'rounded-b-3xl '"
 >
   <div class="flex w-full flex-col justify-between md:flex-row">
-    <p class="text-color-primary">
-      Bem Vindo, {{ user.username.split.0.title }}!
-    </p>
-    <span
-      class="text-sm text-gray-400 md:ml-1 md:mr-3 md:text-base md:text-color-primary"
-    >
+    <div class="flex items-center">
+      <button
+      class="text-color-primary hover:text-color-secondary"
+      @click="open = !open">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke="currentColor"
+        class="text-color-primary m-1 h-6 w-6 hover:text-color-secondary"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          stroke-width="2"
+          d="M3 12h18M3 6h18M3 18h18"
+        />
+      </svg>
+      </button>
+      <p class="text-color-primary px-5">
+        Bem Vindo, {{ user.username.split.0.title }}!
+      </p>
+    </div>
+    <span class="text-sm md:ml-1 md:mr-3 md:text-base md:text-gray-400">
       {% if user.is_superuser %}
         Coordenador
       {% elif user.is_staff %}
