Sai de Administração... Comecei em Alunos.... Problema de Alunos terem acesso a Dashboard resolvido! Mudar tela home depois do Merge

--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -1,7 +1,7 @@
 {% extends 'core/base.html' %} {% load static %} {% block content %}
 <main class="flex-1 p-5">
   <h1 class="mb-3 from-sky-800 font-sans text-3xl font-bold">Alunos</h1>
-  <form action="sla" method="get" class="flex items-stretch justify-between">
+  <form action="" method="get" class="flex items-stretch justify-between">
     <div
       class="relative flex gap-3"
       x-data="{ input: '', clear() { this.input = '' } }"
