--- a/core/templates/core/navbar.html
+++ b/core/templates/core/navbar.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load permission_tags %}
 <nav
   class="sticky left-0 top-0 flex flex-col justify-between overflow-y-scroll rounded-r-lg bg-color-primary py-5 text-slate-100 transition-all"
   x-data="{ open: false }"
