Added password security check

--- a/core/templates/core/enroll.html
+++ b/core/templates/core/enroll.html
@@ -2,7 +2,7 @@
 <script defer src="{% static 'core/js/enroll.js' %}"></script>
 <link rel="stylesheet" href="{% static 'core/dist/css/enroll.css' %}" />
 {% endblock %} {% block content %}
-<main class="framed m-8 mb-20 p-7">
+<main class="framed m-8 p-7">
   <form
     action="{% url 'enroll' %}"
     method="POST"
