--- a/core/templates/core/secret.html
+++ b/core/templates/core/secret.html
@@ -2,12 +2,32 @@
 <title>Área Secreta</title>
 <link rel="stylesheet" href="{% static 'core/dist/css/enroll.css' %}" />
 <script defer src="{% static 'core/js/enroll.js' %}"></script>
-<script>
+<script defer>
   if (!confirm("Você deseja criar um conta administrativa?"))
     location.replace("{% url 'dashboard' %}");
+
+  document.addEventListener("alpine:init", () => {
+    Alpine.data("dialog", () => ({
+      password: "",
+      checks: [
+        {
+          description: "Conter ao menos 10 caracteres",
+          test: (s) => s.length >= 10,
+        },
+        {
+          description: "Conter caracteres especiais e números",
+          test: (s) => /[ `!@#$%^&*()_+\-=\[\]{};':"\\|,.<>\/?~]/.test(s),
+        },
+        {
+          description: "Combinar letras maiúsculas e minúsculas",
+          test: (s) => s != s.toLowerCase() && s != s.toUpperCase(),
+        },
+      ],
+    }));
+  });
 </script>
 {% endblock %} {% block content %}
-<main class="framed m-8 mb-20 p-7" x-data="{ confirmation: false }">
+<main class="framed m-8 p-7" x-data="{ confirmation: false }">
   <form
     action="{% url 'secret' %}"
     method="POST"
@@ -219,16 +239,78 @@
             <input type="text" name="complement" id="txt-comp" size="8" />
           </div>
         </div>
-        <button class="btn" @click.prevent="confirmation = true">Continuar</button>
+        <button class="btn" @click.prevent="confirmation = true">
+          Continuar
+        </button>
       </article>
-      <dialog :open="confirmation" class="shadow-lg p-5">
-        <div class="field">
-          <label for="txt-key">Chave de segurança</label>
-          <input type="password" name="key" id="txt-key">
-        </div>
-        <div class="flex gap-3">
-          <button class="btn" type="submit">Confirmar</button>
-          <button class="btn" @click.prevent="confirmation = false">Voltar</button>
+      <dialog
+        :open="confirmation"
+        class="rounded-xl p-5 shadow-lg"
+        @keydown.escape.window="confirmation = false"
+      >
+        <div x-data="dialog">
+          <div class="field">
+            <label for="txt-password">Senha</label>
+            <input
+              type="text"
+              name="password"
+              id="txt-password"
+              x-model="password"
+              required
+            />
+          </div>
+          <ul>
+            <template x-for="check in checks">
+              <li
+                class="flex gap-2"
+                :class="check.test(password) ? 'text-lime-500' : 'text-red-500'"
+              >
+                <template x-if="check.test(password)">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="h-6 w-6"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+                    />
+                  </svg>
+                </template>
+                <template x-if="!check.test(password)">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="h-6 w-6"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M9.75 9.75l4.5 4.5m0-4.5l-4.5 4.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+                    />
+                  </svg>
+                </template>
+                <span x-text="check.description"></span>
+              </li>
+            </template>
+          </ul>
+          <div class="field">
+            <label for="txt-key">Chave de segurança</label>
+            <input type="text" name="key" id="txt-key" required />
+          </div>
+          <div class="mt-3 flex gap-3">
+            <button class="btn" type="submit">Confirmar</button>
+            <button class="btn" @click.prevent="confirmation = false">
+              Voltar
+            </button>
+          </div>
         </div>
       </dialog>
     </section>
