Added password check

--- a/core/templates/core/secret.html
+++ b/core/templates/core/secret.html
@@ -2,30 +2,7 @@
 <title>Área Secreta</title>
 <link rel="stylesheet" href="{% static 'core/dist/css/enroll.css' %}" />
 <script defer src="{% static 'core/js/enroll.js' %}"></script>
-<script defer>
-  if (!confirm("Você deseja criar um conta administrativa?"))
-    location.replace("{% url 'dashboard' %}");
-
-  document.addEventListener("alpine:init", () => {
-    Alpine.data("dialog", () => ({
-      password: "",
-      checks: [
-        {
-          description: "Conter ao menos 10 caracteres",
-          test: (s) => s.length >= 10,
-        },
-        {
-          description: "Conter caracteres especiais e números",
-          test: (s) => /[ `!@#$%^&*()_+\-=\[\]{};':"\\|,.<>\/?~]/.test(s),
-        },
-        {
-          description: "Combinar letras maiúsculas e minúsculas",
-          test: (s) => s != s.toLowerCase() && s != s.toUpperCase(),
-        },
-      ],
-    }));
-  });
-</script>
+<script defer src="{% static 'core/js/secret.js' %}"></script>
 {% endblock %} {% block content %}
 <main class="framed m-8 p-7" x-data="{ confirmation: false }">
   <form
@@ -245,27 +222,36 @@
       </article>
       <dialog
         :open="confirmation"
-        class="rounded-xl p-5 shadow-lg"
+        class="rounded-xl py-5 px-8 shadow-lg border border-slate-400"
         @keydown.escape.window="confirmation = false"
       >
         <div x-data="dialog">
           <div class="field">
             <label for="txt-password">Senha</label>
             <input
-              type="text"
+              type="password"
               name="password"
               id="txt-password"
               x-model="password"
               required
             />
           </div>
-          <ul>
+          <div class="field mt-3">
+            <label for="txt-duplicate">Confirme a senha</label>
+            <input
+              type="password"
+              id="txt-duplicate"
+              x-model="duplicate"
+              required
+            />
+          </div>
+          <ul class="my-2">
             <template x-for="check in checks">
               <li
                 class="flex gap-2"
-                :class="check.test(password) ? 'text-lime-500' : 'text-red-500'"
+                :class="check.test(password, duplicate) ? 'text-lime-500' : 'text-red-500'"
               >
-                <template x-if="check.test(password)">
+                <template x-if="check.test(password, duplicate)">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     fill="none"
@@ -281,7 +267,7 @@
                     />
                   </svg>
                 </template>
-                <template x-if="!check.test(password)">
+                <template x-if="!check.test(password, duplicate)">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     fill="none"
@@ -303,7 +289,7 @@
           </ul>
           <div class="field">
             <label for="txt-key">Chave de segurança</label>
-            <input type="text" name="key" id="txt-key" required />
+            <input type="password" name="key" id="txt-key" required />
           </div>
           <div class="mt-3 flex gap-3">
             <button class="btn" type="submit">Confirmar</button>
