--- a/core/templates/core/boletim.html
+++ b/core/templates/core/boletim.html
@@ -3,37 +3,97 @@
 {% endblock %} {% block content %}
 <div class="flex justify-center">
   <div class="grid grid-cols-3 gap-10 pt-44">
-    <div class="col-span-2 h-[450px] w-[900px] rounded-3xl bg-color-boletim">
-      <table class="table-auto border-separate pl-2">
+    <div class="col-span-2 h-auto w-auto rounded-3xl bg-color-boletim">
+      <table class=" border-separate border-spacing-3 pl-2">
         <thead>
-          <tr>
-            <th class="bg-color-boletim rounded-l-3xl"></th>
-            <th class="bg-color-dark-orange" > 1 ºBim </th>
-            <th> 2 ºBim </th>
-            <th> 3 ºBim </th>
-            <th> 4 ºBim </th>
-          </tr>
+            <tr>
+              <th class="bg-color-boletim rounded-l-3xl"></th> <!-- empty -->
+              <th class="bg-color-dark-orange p-3 rounded-xl"> 1 ºBim </th>
+              <th class="bg-color-dark-orange p-3 rounded-xl"> 2 ºBim </th>
+              <th class="bg-color-dark-orange p-3 rounded-xl"> 3 ºBim </th>
+              <th class="bg-color-dark-orange p-3 rounded-xl"> 4 ºBim </th>
+              <th class="bg-color-dark-orange p-3 rounded-xl"> Final </th>
+              <th class="bg-color-dark-orange p-3 rounded-xl w-10"> Análise Conselho </th>
+              <th class="bg-color-dark-orange p-3 rounded-xl"> Recon </th>
+              <th class="bg-color-dark-orange p-3 rounded-xl"> Recla. </th>
+            </tr>
         </thead>
         <tbody >
           <tr>
-            <td class="bg-color-name-boletim rounded-3xl ">Lingua Portuguêsa</td>
+            <td class="bg-color-name-boletim rounded-xl text-white text-center">Lingua Portuguêsa</td>
+            <td class="bg-color-grey rounded-t-lg border-none "></td>
+            <td class="bg-color-grey rounded-t-lg border-none"></td>
+            <td class="bg-color-grey rounded-t-lg border-none"></td>
+            <td class="bg-color-grey rounded-t-lg border-none"></td>
+            <td class="bg-color-grey rounded-t-lg border-none"></td>
+            <td class="bg-color-grey rounded-t-lg border-none"></td>
+            <td class="bg-color-grey rounded-t-lg border-none"></td>
+            <td class="bg-color-grey rounded-t-lg border-none"></td>
           </tr>
           <tr>
-            <td class="bg-color-name-boletim rounded-3xl">Lingua Inglesa</td>
+            <td class="bg-color-name-boletim rounded-xl text-white text-center">Lingua Inglesa</td>
+            <td class="bg-color-grey border-none"></td>
+            <td class="bg-color-grey border-none"></td>
+            <td class="bg-color-grey border-none"></td>
+            <td class="bg-color-grey border-none"></td>
+            <td class="bg-color-grey border-none"></td>
+            <td class="bg-color-grey border-none"></td>
+            <td class="bg-color-grey border-none"></td>
+            <td class="bg-color-grey border-none"></td>
           </tr>
           <tr>
-            <td class="bg-color-name-boletim rounded-3xl">Matemática</td>
+            <td class="bg-color-name-boletim rounded-xl text-white text-center">Matemática</td>
+            <td class="bg-color-grey border-none"></td>
+            <td class="bg-color-grey border-none"></td>
+            <td class="bg-color-grey border-none"></td>
+            <td class="bg-color-grey border-none"></td>
+            <td class="bg-color-grey border-none"></td>
+            <td class="bg-color-grey border-none"></td>
+            <td class="bg-color-grey border-none"></td>
+            <td class="bg-color-grey border-none"></td>
           <tr>
-            <td class="bg-color-name-boletim rounded-3xl">TCC</td>
+            <td class="bg-color-name-boletim rounded-xl text-white text-center">TCC</td>
+            <td class="bg-color-grey border-none"></td>
+            <td class="bg-color-grey border-none"></td>
+            <td class="bg-color-grey border-none"></td>
+            <td class="bg-color-grey border-none"></td>
+            <td class="bg-color-grey border-none"></td>
+            <td class="bg-color-grey border-none"></td>
+            <td class="bg-color-grey border-none"></td>
+            <td class="bg-color-grey border-none"></td>
           </tr>
           <tr>
-            <td class="bg-color-name-boletim rounded-3xl">Programação WEB</td>
+            <td class="bg-color-name-boletim rounded-xl text-white text-center">Programação WEB</td>
+            <td class="bg-color-grey border-none"></td>
+            <td class="bg-color-grey border-none"></td>
+            <td class="bg-color-grey border-none"></td>
+            <td class="bg-color-grey border-none"></td>
+            <td class="bg-color-grey border-none"></td>
+            <td class="bg-color-grey border-none"></td>
+            <td class="bg-color-grey border-none"></td>
+            <td class="bg-color-grey border-none"></td>
           </tr>
           <tr>
-            <td class="bg-color-name-boletim rounded-3xl">Banco de Dados</td>
+            <td class="bg-color-name-boletim rounded-xl text-white text-center ">Banco de Dados</td>
+            <td class="bg-color-grey border-none"></td>
+            <td class="bg-color-grey border-none"></td>
+            <td class="bg-color-grey border-none"></td>
+            <td class="bg-color-grey border-none"></td>
+            <td class="bg-color-grey border-none"></td>
+            <td class="bg-color-grey border-none"></td>
+            <td class="bg-color-grey border-none"></td>
+            <td class="bg-color-grey border-none"></td>
           </tr>
           <tr>
-            <td class="bg-color-name-boletim rounded-3xl">Programação Mobile</td>
+            <td class="bg-color-name-boletim rounded-xl text-white text-center">Programação Mobile</td>
+            <td class="bg-color-grey rounded-b-lg border-none"></td>
+            <td class="bg-color-grey rounded-b-lg border-none"></td>
+            <td class="bg-color-grey rounded-b-lg border-none"></td>
+            <td class="bg-color-grey rounded-b-lg border-none"></td>
+            <td class="bg-color-grey rounded-b-lg border-none"></td>
+            <td class="bg-color-grey rounded-b-lg border-none"></td>
+            <td class="bg-color-grey rounded-b-lg border-none"></td>
+            <td class="bg-color-grey rounded-b-lg border-none"></td>
           </tr>
         </tbody>
       </table>
