--- a/core/templates/core/header.html
+++ b/core/templates/core/header.html
@@ -1,5 +1,5 @@
 <header
-  class="relative flex items-center justify-between bg-slate-100 px-8 py-5 shadow-sm"
+  class="fixed w-full flex items-center justify-between bg-slate-100 px-8 py-5 shadow-sm"
   :class="open ? 'rounded-br-3xl' : 'rounded-b-3xl '"
 >
   <div class="flex w-full flex-col justify-between md:flex-row">
@@ -37,22 +37,25 @@
        | {{ school_name }}
     </span>
   </div>
-
-  <div class="rounded-2xl border border-color-secondary p-1.5">
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      fill="none"
-      viewBox="0 0 24 24"
-      stroke-width="1.5"
-      stroke="currentColor"
-      class="h-6 w-6 text-color-secondary"
-    >
-      <path
-        class="color-secondary"
-        stroke-linecap="round"
-        stroke-linejoin="round"
-        d="M14.857 17.082a23.848 23.848 0 005.454-1.31A8.967 8.967 0 0118 9.75v-.7V9A6 6 0 006 9v.75a8.967 8.967 0 01-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 01-5.714 0m5.714 0a3 3 0 11-5.714 0M3.124 7.5A8.969 8.969 0 015.292 3m13.416 0a8.969 8.969 0 012.168 4.5"
-      />
-    </svg>
+  <div class="" 
+      :class ="open ? 'pr-80' : 'pr-0'"
+      >
+    <div class="rounded-2xl border border-color-secondary p-1.5">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke-width="1.5"
+        stroke="currentColor"
+        class="h-6 w-6 text-color-secondary"
+      >
+        <path
+          class="color-secondary"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          d="M14.857 17.082a23.848 23.848 0 005.454-1.31A8.967 8.967 0 0118 9.75v-.7V9A6 6 0 006 9v.75a8.967 8.967 0 01-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 01-5.714 0m5.714 0a3 3 0 11-5.714 0M3.124 7.5A8.969 8.969 0 015.292 3m13.416 0a8.969 8.969 0 012.168 4.5"
+        />
+      </svg>
+    </div>
   </div>
 </header>
