--- a/core/templates/core/navbar.html
+++ b/core/templates/core/navbar.html
@@ -56,7 +56,7 @@
     </a>
   </li>
   <li>
-    <a href="">
+    <a href="{% url 'comunicados'%}">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         fill="none"
@@ -74,7 +74,7 @@
     </a>
   </li>
   <li>
-    <a href="">
+    <a href="{% url 'boletim' %}">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         fill="none"
