--- a/core/templates/core/boletim.html
+++ b/core/templates/core/boletim.html
@@ -3,7 +3,7 @@
 {% endblock %} {% block content %}
 <div class="flex justify-center">
   <div class="grid grid-cols-3 gap-10 pt-44">
-    <div class="col-span-2 h-auto w-auto rounded-3xl bg-color-boletim">
+    <div class="col-span-2 h-auto w-max rounded-3xl bg-color-boletim">
       <table class=" border-separate border-spacing-3 pl-2">
         <thead>
             <tr>
@@ -32,76 +32,121 @@
           </tr>
           <tr>
             <td class="bg-color-name-boletim rounded-xl text-white text-center">Lingua Inglesa</td>
-            <td class="bg-color-grey border-none"></td>
-            <td class="bg-color-grey border-none"></td>
-            <td class="bg-color-grey border-none"></td>
-            <td class="bg-color-grey border-none"></td>
-            <td class="bg-color-grey border-none"></td>
-            <td class="bg-color-grey border-none"></td>
-            <td class="bg-color-grey border-none"></td>
-            <td class="bg-color-grey border-none"></td>
+            <td class="bg-color-grey border-none text-center">asdas</td>
+            <td class="bg-color-grey border-none text-center">asdas</td>
+            <td class="bg-color-grey border-none text-center">asd</td>
+            <td class="bg-color-grey border-none text-center">asd</td>
+            <td class="bg-color-grey border-none text-center">asd</td>
+            <td class="bg-color-grey border-none text-center">asd</td>
+            <td class="bg-color-grey border-none text-center">asd</td>
+            <td class="bg-color-grey border-none text-center">asd</td>
           </tr>
           <tr>
             <td class="bg-color-name-boletim rounded-xl text-white text-center">Matemática</td>
-            <td class="bg-color-grey border-none"></td>
-            <td class="bg-color-grey border-none"></td>
-            <td class="bg-color-grey border-none"></td>
-            <td class="bg-color-grey border-none"></td>
-            <td class="bg-color-grey border-none"></td>
-            <td class="bg-color-grey border-none"></td>
-            <td class="bg-color-grey border-none"></td>
-            <td class="bg-color-grey border-none"></td>
+            <td class="bg-color-grey border-none text-center"></td>
+            <td class="bg-color-grey border-none text-center"></td>
+            <td class="bg-color-grey border-none text-center"></td>
+            <td class="bg-color-grey border-none text-center"></td>
+            <td class="bg-color-grey border-none text-center"></td>
+            <td class="bg-color-grey border-none text-center"></td>
+            <td class="bg-color-grey border-none text-center"></td>
+            <td class="bg-color-grey border-none text-center"></td>
           <tr>
             <td class="bg-color-name-boletim rounded-xl text-white text-center">TCC</td>
-            <td class="bg-color-grey border-none"></td>
-            <td class="bg-color-grey border-none"></td>
-            <td class="bg-color-grey border-none"></td>
-            <td class="bg-color-grey border-none"></td>
-            <td class="bg-color-grey border-none"></td>
-            <td class="bg-color-grey border-none"></td>
-            <td class="bg-color-grey border-none"></td>
-            <td class="bg-color-grey border-none"></td>
+            <td class="bg-color-grey border-none text-center"></td>
+            <td class="bg-color-grey border-none text-center"></td>
+            <td class="bg-color-grey border-none text-center"></td>
+            <td class="bg-color-grey border-none text-center"></td>
+            <td class="bg-color-grey border-none text-center"></td>
+            <td class="bg-color-grey border-none text-center"></td>
+            <td class="bg-color-grey border-none text-center"></td>
+            <td class="bg-color-grey border-none text-center"></td>
           </tr>
           <tr>
             <td class="bg-color-name-boletim rounded-xl text-white text-center">Programação WEB</td>
-            <td class="bg-color-grey border-none"></td>
-            <td class="bg-color-grey border-none"></td>
-            <td class="bg-color-grey border-none"></td>
-            <td class="bg-color-grey border-none"></td>
-            <td class="bg-color-grey border-none"></td>
-            <td class="bg-color-grey border-none"></td>
-            <td class="bg-color-grey border-none"></td>
-            <td class="bg-color-grey border-none"></td>
+            <td class="bg-color-grey border-none text-center"></td>
+            <td class="bg-color-grey border-none text-center"></td>
+            <td class="bg-color-grey border-none text-center"></td>
+            <td class="bg-color-grey border-none text-center"></td>
+            <td class="bg-color-grey border-none text-center"></td>
+            <td class="bg-color-grey border-none text-center"></td>
+            <td class="bg-color-grey border-none text-center"></td>
+            <td class="bg-color-grey border-none text-center"></td>
           </tr>
           <tr>
             <td class="bg-color-name-boletim rounded-xl text-white text-center ">Banco de Dados</td>
-            <td class="bg-color-grey border-none"></td>
-            <td class="bg-color-grey border-none"></td>
-            <td class="bg-color-grey border-none"></td>
-            <td class="bg-color-grey border-none"></td>
-            <td class="bg-color-grey border-none"></td>
-            <td class="bg-color-grey border-none"></td>
-            <td class="bg-color-grey border-none"></td>
-            <td class="bg-color-grey border-none"></td>
+            <td class="bg-color-grey border-none text-center"></td>
+            <td class="bg-color-grey border-none text-center"></td>
+            <td class="bg-color-grey border-none text-center"></td>
+            <td class="bg-color-grey border-none text-center"></td>
+            <td class="bg-color-grey border-none text-center"></td>
+            <td class="bg-color-grey border-none text-center"></td>
+            <td class="bg-color-grey border-none text-center"></td>
+            <td class="bg-color-grey border-none text-center"></td>
           </tr>
           <tr>
             <td class="bg-color-name-boletim rounded-xl text-white text-center">Programação Mobile</td>
-            <td class="bg-color-grey rounded-b-lg border-none"></td>
-            <td class="bg-color-grey rounded-b-lg border-none"></td>
-            <td class="bg-color-grey rounded-b-lg border-none"></td>
-            <td class="bg-color-grey rounded-b-lg border-none"></td>
-            <td class="bg-color-grey rounded-b-lg border-none"></td>
-            <td class="bg-color-grey rounded-b-lg border-none"></td>
-            <td class="bg-color-grey rounded-b-lg border-none"></td>
-            <td class="bg-color-grey rounded-b-lg border-none"></td>
+            <td class="bg-color-grey rounded-b-lg border-none text-center"></td>
+            <td class="bg-color-grey rounded-b-lg border-none text-center"></td>
+            <td class="bg-color-grey rounded-b-lg border-none text-center"></td>
+            <td class="bg-color-grey rounded-b-lg border-none text-center"></td>
+            <td class="bg-color-grey rounded-b-lg border-none text-center"></td>
+            <td class="bg-color-grey rounded-b-lg border-none text-center"></td>
+            <td class="bg-color-grey rounded-b-lg border-none text-center"></td>
+            <td class="bg-color-grey rounded-b-lg border-none text-center"></td>
           </tr>
         </tbody>
       </table>
     </div>
-    <div class="h-[100px] w-[300px] rounded-3xl bg-color-boletim">
-      2
+
+    <div class="flex h-auto w-max rounded-3xl bg-color-boletim">
+      <table class="border-separate border-spacing-3">
+        <thead>
+          <tr>
+            <th class="bg-color-dark-orange p-5 rounded-xl"> Aulas </th>
+            <th class="bg-color-dark-orange p-5 rounded-xl"> Faltas </th>
+            <th class="bg-color-dark-orange p-5 rounded-xl"> Situação </th>
+          </tr>
+        </thead>
+        <tbody >
+          <tr>
+            <td class="h-[40px] bg-color-grey rounded-t-lg border-none"></td>
+            <td class=" bg-color-grey rounded-t-lg border-none"></td>
+            <td class=" bg-color-grey rounded-t-lg border-none"></td>
+          </tr>
+          <tr>
+            <td class="h-[50px] bg-color-grey border-none"></td>
+            <td class=" bg-color-grey border-none"></td>
+            <td class=" bg-color-grey border-none"></td>
+          </tr>
+          <tr>
+            <td class="h-[50px] bg-color-grey border-none"></td>
+            <td class=" bg-color-grey border-none"></td>
+            <td class=" bg-color-grey border-none"></td>
+          </tr>
+          <tr>
+            <td class="h-[50px] bg-color-grey border-none"></td>
+            <td class=" bg-color-grey border-none"></td>
+            <td class=" bg-color-grey border-none"></td>
+          </tr>
+          <tr>
+            <td class="h-[50px] bg-color-grey border-none"></td>
+            <td class=" bg-color-grey border-none"></td>
+            <td class=" bg-color-grey border-none"></td>
+          </tr>
+          <tr>
+            <td class="h-[50px] bg-color-grey border-none"></td>
+            <td class=" bg-color-grey border-none"></td>
+            <td class=" bg-color-grey border-none"></td>
+          </tr>
+          <tr>
+            <td class="h-[50px] bg-color-grey rounded-b-lg border-none"></td>
+            <td class=" bg-color-grey rounded-b-lg border-none"></td>
+            <td class=" bg-color-grey rounded-b-lg border-none"></td>
+          </tr>
+      </table>
     </div>
-    <div class="col-span-3 h-[100px] rounded-3xl bg-color-boletim">
+    <div class="justify-self-center h-[100px] rounded-3xl bg-color-boletim">
       3
     </div>
   </div>
